--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>I'm a web developer passionate about building clean and efficient projects.</p>
+      <p>I am a third-year Computer Science student at Goldsmiths, University of London. In my free time, I train at the gym and compete in Brazilian Jiu-Jitsu. My routine is quite simple — I go to university, train, and head home. I am currently a white belt, and my goal is to earn my purple belt by 2027.</p>
   </section>
 
   <section class="projects">
