updated and debugging changes

--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
   <header>
     <h1>My Portfolio</h1>
     <p>Welcome to my simple Node.js portfolio page!</p>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="gallery.html">Gallery</a>
+    </nav>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
-      <p>I am a third-year Computer Science student at Goldsmiths, University of London. In my free time, I train at the gym and compete in Brazilian Jiu-Jitsu. My routine is quite simple — I go to university, train, and head home. I am currently a white belt, and my goal is to earn my purple belt by 2027.</p>
-  </section>
-
-  <section class="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li>🌱 Plant Care App</li>
-      <li>🎮 JavaScript Mario Game</li>
-      <li>💻 Algorithm Visualizer</li>
-    </ul>
+    <div class="about-content">
+      <img src="images/profile.jpeg" alt="Profile photo" class="profile-img">
+      <p>
+        I am a third-year Computer Science student at Goldsmiths, University of London.
+        In my free time, I train at the gym and compete in Brazilian Jiu-Jitsu.
+        My routine is quite simple — I go to university, train, and head home.
+        I am currently a white belt, and my goal is to earn my purple belt by 2027.
+      </p>
+    </div>
   </section>
 
   <footer>
-    <p>Contact: myemail@example.com</p>
+    <p>Contact: hakancoskun824@gmail.com</p>
   </footer>
 </body>
 </html>
